--- a/ModuloCompras/appsettings.json
+++ b/ModuloCompras/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "Conexao": {
+    "ConexaoPadrao": "server=localhost;database=ESTOQUE;uid=root;password=; convert zero datetime=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
