--- a/ModuloCompras/appsettings.Development.json
+++ b/ModuloCompras/appsettings.Development.json
@@ -5,5 +5,8 @@
       "System": "Information",
       "Microsoft": "Information"
     }
+  },
+  "ConnectionStrings": {
+    "ConexaoPadrao": "server=localhost;database=ESTOQUE;uid=root;password=; convert zero datetime=True"
   }
 }
